<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alysson.com.br.aplicativo.activitys.CadastroEmpresaActivity">


    <LinearLayout
        android:id="@+id/cadastro_usuario_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/txt_cadastrar_se"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/txt_cadastrar_se" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_razao_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_empresa_razao_social"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_fantasia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_empresa_fantasia"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_empresa_cnpj"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_email_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_empresa_telefone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_empresa_cep"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_logradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_empresa_logradouro"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_senha_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_senha"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_confirma_senha_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_confirma_senha"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_continuar"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_continuar"
            android:textColor="@color/colorBackground"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
