<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="alysson.com.br.aplicativo.fragments.CadastroTipoAtendimentoFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_nome"
                android:id="@+id/txt_nome_atendente"
                android:labelFor="@+id/edt_nome_atendente"/>

            <EditText
                android:id="@+id/edt_nome_atendente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_email"
                android:id="@+id/txt_email_atendente"
                android:labelFor="@+id/edt_email_atendente"/>

            <EditText
                android:id="@+id/edt_email_atendente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_sexo"
                android:id="@+id/txt_sexo"
                android:labelFor="@+id/spn_sexo"/>

            <Spinner
                android:id="@+id/spn_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_salvar_atendente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save" />

</FrameLayout>
